--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -9,13 +9,9 @@
 <%# PNGファビコン - レガシーブラウザのフォールバック用 %>
 <%= favicon_link_tag 'logo/favicon.png', type: 'image/png' %>
 
-<%# CDNスクリプト %>
-<script src="https://unpkg.com/@hotwired/turbo-rails@8.0.0-beta.2/dist/turbo.es2017-esm.js" type="module"></script>
-<script src="https://unpkg.com/@hotwired/stimulus@3.2.2/dist/stimulus.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/apexcharts@3.45.0/dist/apexcharts.min.js"></script>
 
 <%# スタイルシートとJavaScript %>
 <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-<%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
+<%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module", defer: true %>
 
 <%= display_meta_tags(default_meta_tags) %>
