Wisewill委託分シートのインポート機能を修正

--- a/app/views/sales_reports/_csv_import_form.html.erb
+++ b/app/views/sales_reports/_csv_import_form.html.erb
@@ -6,10 +6,8 @@
         <div class="form-control">
           <%= f.label :import_type, t("sales_reports.csv_import.import_type"), class: "label font-medium text-sm" %>
           <%= f.select :import_type, [
-            [t("sales_reports.csv_import.types.filtered_data_sheet"), "filtered_data_sheet"],
-            [t("sales_reports.csv_import.types.ebay_sales_report"), "ebay_sales_report"],
-            [t("sales_reports.csv_import.types.cpass_shipping_cost"), "cpass_shipping_cost"],
-            [t("sales_reports.csv_import.types.ebay_transaction_report"), "ebay_transaction_report"]
+            [t("sales_reports.csv_import.types.wisewill_data_sheet"), "wisewill_data_sheet"],
+            [t("sales_reports.csv_import.types.cpass_data_sheet"), "cpass_data_sheet"],
           ], {}, { class: "select select-sm select-bordered w-full focus:select-primary text-base" } %>
         </div>
 
